# FApi

./: .gitignore  README.md  pyproject.toml
app/api/routes/: product.py
fapi/: cli.py
fapi/commands/: add.py  create.py
fapi/templates/: requirements.txt.j2
fapi/templates/app/: main.py.j2
fapi/templates/app/api/: router.py.j2
fapi/templates/app/api/routes/: user.py.j2  users.py.j2
fapi/templates/app/core/: config.py.j2
fapi/utils/: ustils.py
hello/: requirements.txt
hello/app/: main.py
hello/app/api/: router.py
hello/app/core/: config.py  database.py
hello/app/crud/: user.py
