[project]
name = "fastapi-start"
version = "0.1.0"
description = "FastAPI project scaffolder CLI"
authors = [{name="Your Name"}]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "typer[all]",
    "jinja2",
]

[project.scripts]
fastapi-start = "fastapi_start.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
