[project]
name = "fapi"
version = "0.1.0"
description = "FastAPI project scaffolder CLI"
authors = [{name="Dahmoun Mouaine Aymen"}]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "typer[all]",
    "jinja2",
]

[project.scripts]
fapi = "fapi.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
